methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
    forward();
           ^SlugTracking:9: error: type mismatch;
 found   : Unit
 required: Boolean
    forward();
           ^SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
  }else if (getCouleurSol()!=Color.green){
        ^