methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  forward()
  if (getCouleurSol()==Color.green){
    forward();
  }else if (getCouleurSol()!=Color.green){
    backward();
    left();
    forward();
  }
}